testing/telegram-desktop: upgrade to 1.9.8

--- a/testing/telegram-desktop/APKBUILD
+++ b/testing/telegram-desktop/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # TODO(Leo): remove pulseaudio dep
 pkgname=telegram-desktop
-pkgver=1.9.4
+pkgver=1.9.8
 pkgrel=0
 pkgdesc="Telegram Desktop messaging app"
 options="!check" # Requires Catch2 to be packaged.
@@ -12,7 +12,7 @@ license="GPL-3.0-or-later WITH OpenSSL"
 depends="qt5-qtimageformats libappindicator"
 makedepends="
 	cmake
-	ninja
+	samurai
 	zlib-dev
 	opus-dev
 	libva-dev
@@ -63,9 +63,10 @@ build() {
 		-DDESKTOP_APP_USE_PACKAGED=ON \
 		-DTDESKTOP_API_ID=17349 \
 		-DTDESKTOP_API_HASH=344583e45741c457fe1862106095a5eb \
-		-DTDESKTOP_DISABLE_GTK_INTEGRATION=ON \
 		-DDESKTOP_APP_USE_PACKAGED_RLOTTIE=OFF \
 		-DTDESKTOP_USE_PACKAGED_TGVOIP=OFF \
+		-DTDESKTOP_LAUNCHER_BASENAME=telegram-desktop \
+		-DTDESKTOP_FORCE_GTK_FILE_DIALOG=ON \
 		${CMAKE_CROSSOPTS} .
 	ninja -C build
 }
@@ -76,8 +77,8 @@ package() {
 				"$pkgdir"/usr/share/appdata \
 				"$pkgdir"/usr/share/kservices5 \
 
-	strip -s build/bin/Telegram
-	install -m755 build/bin/Telegram "$pkgdir"/usr/bin/telegram-desktop
+	strip -s build/bin/telegram-desktop
+	install -m755 build/bin/telegram-desktop -t "$pkgdir"/usr/bin
 	install -m644 lib/xdg/telegramdesktop.desktop -t "$pkgdir"/usr/share/applications
 	install -m644 lib/xdg/telegramdesktop.appdata.xml -t "$pkgdir"/usr/share/appdata
 	install -m644 lib/xdg/tg.protocol -t "$pkgdir"/usr/share/kservices5
@@ -91,7 +92,7 @@ package() {
 	done
 }
 
-sha512sums="0967f60dd978a5fc5ec2501a22e8865afd4ddeaacfd1b0acfb133cd511767ff1c6f03a099aef3de03b0f837c8eccac1caea14c395ee54c8d3ab5b35de7551745  tdesktop-1.9.4-full.tar.gz
+sha512sums="5562eb99812a8faec74fe073323d6e04e36311c1e4ce984035212ecfed8bd5d12df92cd0f0022401201136315fb5556971b267b4bf47edf4eeddc9926c7969dc  tdesktop-1.9.8-full.tar.gz
 8de8c0508177da5fcac4f2dcee4d8baef4b99f74f1dca296567bc3689a6bd17a47c1c945df504abc8811b82a687010d0709503c7c32e47d2ebb1cf0e374c80c5  xdg.patch
 6062602d02e20917c06f17d12bb21bd4a94b23c2a6744a8a05c2c93d41747ba413e110edd344ecd130c28ebaf997ae46b347d239e69f5856ead42318bd5b01cd  musl-basename.patch
 9a3e491e2b2a9ea3f15da3766a2d743bafead7ae1e6a6ca3e6e9c7352dc268221311acd73664e5452622e2bc91cc88a2a7d3b4ebe6634b4da74c54b3bde0bb7f  ppc.patch
