main/dahdi-tools: cleanup and modernize, fix url=

--- a/main/dahdi-tools/APKBUILD
+++ b/main/dahdi-tools/APKBUILD
@@ -2,31 +2,27 @@
 # Maintainer: Timo Teras <timo.teras@iki.fi>
 pkgname=dahdi-tools
 pkgver=3.1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Digium Asterisk Hardware Device Interface management utilities"
-url="http://www.asterisk.org"
+url="https://www.asterisk.org"
 arch="all"
 license="GPL-2.0-or-later"
-depends=""
 depends_dev="bsd-compat-headers linux-headers dahdi-linux-dev newt-dev"
 makedepends="perl file autoconf automake libtool $depends_dev"
-install=
 subpackages="$pkgname-doc $pkgname-dev"
-source="http://downloads.digium.com/pub/telephony/dahdi-tools/releases/$pkgname-$pkgver.tar.gz
+source="http://downloads.digium.com/pub/telephony/dahdi-tools/releases/dahdi-tools-$pkgver.tar.gz
 	fix-musl.patch
-	$pkgname.initd"
-
-builddir="$srcdir"/$pkgname-$pkgver
+	$pkgname.initd
+	"
 
 prepare() {
 	default_prepare
 	autoreconf -fi
-} 
+}
 
 
 build() {
-	cd "$builddir"
-	eval local `perl -V:vendorlib`
+	eval local $(perl -V:vendorlib)
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -41,9 +37,9 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make -j1 DESTDIR="$pkgdir" install
 	install -m755 -D "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/dahdi
+	rm -rf "$pkgdir"/usr/lib/dracut # We use mkinitfs, not dracut
 }
 
 sha512sums="e0e5bf24e4834ca39ef7dc1af1bb7ef26bd258a8b2cb2406a7e1ffed25b4b1d44a5fce41d97c5ad7fc6ebb66f965759d2b49ffa6d89845786f43eadb89ff4694  dahdi-tools-3.1.0.tar.gz
