--- a/testing/telegraf/APKBUILD
+++ b/testing/telegraf/APKBUILD
@@ -1,8 +1,10 @@
 # Contributor: Katie Holly <holly@fuslvz.ws>
 # Maintainer: Konstantin Kulikov <k.kulikov2@gmail.com>
 pkgname=telegraf
-pkgver=1.13.1
+pkgver=1.13.2
 pkgrel=0
+_commit=6dad859d # git rev-parse --short HEAD
+_branch=release-1.13 # Just increment together with $pkgver
 pkgdesc="A plugin-driven server agent for collecting & reporting metrics, part of the InfluxDB project"
 url="https://www.influxdata.com/time-series-platform/telegraf/"
 arch="x86_64 aarch64"
@@ -30,7 +32,8 @@ prepare() {
 }
 
 build() {
-	go build -ldflags "-X main.version=$pkgver" ./cmd/telegraf
+	local ldflags="-X main.version=$pkgver -X main.branch=$_branch -X main.commit=$_commit"
+	go build -ldflags "$ldflags" ./cmd/telegraf
 }
 
 check() {
@@ -47,6 +50,6 @@ package() {
 	install -dm755 "$pkgdir/etc/$pkgname.conf.d"
 }
 
-sha512sums="67ea7df9878d0e79b116e6108f8bbe768709c413b35bd8fda5b27358028a5d4b035c692c8cde1eacc45e7dd61617a7cf0e8c4b8e4c8ff4e6643226b3e2cc19da  telegraf-1.13.1.tar.gz
+sha512sums="f321a9262b4565818b9086e85c8bf9f4144b57ebe177f124c862a38a3a842fd989718661e09b9b3c7e8322dca23de8ae25dc15867b23bd15d8331c24c0488479  telegraf-1.13.2.tar.gz
 abe483deb8e12fe140de2c36d17bbfbc97ed7a5de8c3d76162357f7ba6575b8236b7197b92a26ed6d54f95c1ccbfc12ca62d6cc0371bf49d10a1ea5622a51ed1  telegraf.initd
 d1a9aa57f8b5179f2d8396518b9db757fe1c40337b515c1f750cf577683ff15f3174bc757afa70d880a1fef809c873e6aa0da1b903a5a97934c14965712d47a4  telegraf.confd"
