main/boost: run tests with python3

--- a/main/boost/APKBUILD
+++ b/main/boost/APKBUILD
@@ -9,7 +9,7 @@ arch="all"
 license="custom"
 depends="$pkgname-libs"
 depends_dev="$pkgname linux-headers"
-makedepends="$depends_dev python2 python3-dev>=3.8 flex bison bzip2-dev icu-dev xz-dev zlib-dev"
+makedepends="$depends_dev python3-dev>=3.8 flex bison bzip2-dev icu-dev xz-dev zlib-dev"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="https://dl.bintray.com/boostorg/release/$pkgver/source/boost_$_pkgver.tar.bz2
 	boost-1.57.0-python-abi_letters.patch
@@ -118,7 +118,7 @@ build() {
 check() {
 	cd "$builddir"/tools/build/test
 
-	PATH="${_bjam%/*}:$PATH" python2 test_all.py --default-bjam
+	PATH="${_bjam%/*}:$PATH" python3 test_all.py --default-bjam
 }
 
 package() {
