--- a/testing/hw-probe/APKBUILD
+++ b/testing/hw-probe/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname="hw-probe"
-pkgver="1.4"
+pkgver=1.5
 pkgrel=0
 pkgdesc="A tool to probe for hardware and upload result to the Linux Hardware Database"
 url="https://github.com/linuxhw/hw-probe"
@@ -23,4 +23,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="4024de223affe61cebf6a666f2b02223ce6c2fc4b558689cbb2706195d42e1d8d7dbb86b56fcbbb535d3ec09d9eb86d7099ca1779bed2bc49f7e6f7886d81c47  hw-probe-1.4.tar.gz"
+sha512sums="80dd2484bd317ac1e86d7f434626f288648aebf110a4bf81c0c05548abcb19d990119c1690fcb5796384a6c32fd5c1e827698a31165bfc41ef6df9fc7fdd368d  hw-probe-1.5.tar.gz"
