--- a/main/libvirt/APKBUILD
+++ b/main/libvirt/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libvirt
-pkgver=5.10.0
+pkgver=6.0.0
 _ver="${pkgver/_rc/-rc}"
-pkgrel=1
+pkgrel=0
 pkgdesc="A virtualization API for several hypervisor and container systems"
 url="https://libvirt.org/"
 arch="all"
@@ -20,7 +20,7 @@ makedepends="augeas-dev cyrus-sasl-dev device-mapper
 	polkit-dev readline-dev linux-headers jansson-dev
 	$depends_dev perl-xml-xpath
 	fuse-dev util-linux libxml2-utils bash-completion $_daemon_deps $_client_deps
-	automake autoconf libtool rpcsvc-proto
+	automake autoconf libtool rpcsvc-proto py3-docutils
 	"
 install="$pkgname.post-install"
 subpackages="$pkgname-static $pkgname-libs $pkgname-dev $pkgname-doc $pkgname-client $pkgname-daemon
@@ -190,7 +190,7 @@ _common_drivers() {
 		"$subpkgdir"/etc/libvirt/
 }
 
-sha512sums="bb518a6aa6731a7de4b24fc7b8ffdcd2cdd84dfe49047374e0f02265c274eb06dbe1732c9cc4954412853d36d9dd5c1124fb8a5e37f4c01654d85013773ffa23  libvirt-5.10.0.tar.xz
+sha512sums="64259c0cffa9fc01192c5474f69d88a61ed0bae0a100379fed6112723a37eff1865ccfc85a19d6b8cd39ed504f04998bb3f6390aaafff797bb41ef65b6ec413c  libvirt-6.0.0.tar.xz
 9aba6ab73219a635c64a340ee8887356e644445c9128734cbce73f5d54778378da2f10a190365ad88a7db8bc95b1fb17f0c6ca41fc41bb786c09e1afe84d65dc  libvirt.confd
 734afb83b7a4703dd238f1d89dbc853a8c73bcf1994af648c41ab01ae4088e5c7a423f0cb91e5e31f2ae5e60c66d08a6e1583a1e3b88bb5554e0f9fd15ecc15c  libvirt.initd
 36b85f473d292be8df415256d01a562131d8ae61450ba3893658090a12d589ca32215382f56f286a830b4e59ffd98fbe1d92004f2ce14ca0834451b943cd8f2f  virtlogd.initd
