community/influxdb: upgrade to 1.7.9

--- a/community/influxdb/APKBUILD
+++ b/community/influxdb/APKBUILD
@@ -1,61 +1,64 @@
 # Contributor: Stefan Wagner <stw@bit-strickerei.de>
-# Maintainer: Stefan Wagner <stw@bit-strickerei.de>
 # Maintainer: Konstantin Kulikov <k.kulikov2@gmail.com>
 pkgname=influxdb
-pkgver=1.7.7
+pkgver=1.7.9
 pkgrel=0
+_commit=23bc63d43 # git rev-parse --short HEAD
+_branch=1.7 # Keep in sync with $pkgver
 pkgdesc="Scalable datastore for metrics, events, and real-time analytics"
 url="https://www.influxdata.com/time-series-platform/influxdb/"
-arch="all !x86"
+arch="all !x86" # many tests fail on x86, it's unclear whether it works at all.
 license="MIT"
-makedepends="go dep python2 asciidoc xmlto"
+makedepends="go dep asciidoc xmlto"
 install="$pkgname.pre-install"
 subpackages="$pkgname-doc $pkgname-openrc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/influxdata/$pkgname/archive/v$pkgver.tar.gz
-	influxdb.initd
-	influxdb.confd
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/influxdata/influxdb/archive/v$pkgver.tar.gz
+	influxdb.initd influxdb.confd"
 builddir="$srcdir/src/github.com/influxdata/$pkgname"
 
+export GO111MODULE="off"
 export GOPATH="$srcdir"
-export GOCACHE="$srcdir/gocache"
+export GOCACHE="$srcdir/go-build"
+export GOTMPDIR="$srcdir"
 
 prepare() {
 	mkdir -p ${builddir%/*}
-	mv "$srcdir"/$pkgname-$pkgver "$builddir"/ || return 1
+	mv "$srcdir"/$pkgname-$pkgver "$builddir"/
 	cd "$builddir"
 	dep ensure -v
 	default_prepare
 }
 
 build() {
-	local path
-	for path in $(find ./cmd/* -maxdepth 0 -type d); do
-		go build -v -ldflags="-X main.version=$pkgver" \
-			-o ./bin/${path##*/} $path
+	local ldflags="-X main.version=$pkgver -X main.branch=$_branch -X main.commit=$_commit"
+	local pkgs="influx influx_inspect influx_stress influx_tools influx_tsm influxd"
+	local pkg
+	for pkg in $pkgs; do
+		go build -ldflags "$ldflags" -o ./bin/$pkg ./cmd/$pkg
 	done
 	make -C man
 }
 
 check() {
-	# Failures on these arches
-	case $CARCH in
-		s390x|arm*|aarch64|ppc64le) return 0
-		# aarch64: float precision issue (relative diff < 1E15, safe to ignore)
+	local pkgs="./..."
+	case "$CARCH" in
+	# One test in query pkg fail because of lesser float number precision, should be safe to ignore.
+	s390x|aarch64|ppc64le) pkgs="$(go list ./... | grep -v '^github.com/influxdata/influxdb/query$')" ;;
 	esac
-	go test -short ./...
+
+	# CI too slow, some tests timeout.
+	[ "$CARCH" == "armv7" ] && return 0
+
+	go test -short $pkgs
 }
 
 package() {
-	cd "$builddir"
-	local path bindir
-	for path in $(find ./cmd/* -maxdepth 0 -type d); do
-		case "${path##*/}" in
-		influxd) bindir=sbin ;;
-		*) bindir=bin ;;
-		esac
-		install -Dm755 ./bin/"${path##*/}" "$pkgdir"/usr/$bindir/"${path##*/}"
+	local pkgs="influx influx_inspect influx_stress influx_tools influx_tsm"
+	local pkg
+	for pkg in $pkgs; do
+		install -Dm755 "$builddir/bin/$pkg" "$pkgdir/usr/bin/$pkg"
 	done
+	install -Dm755 "$builddir/bin/influxd" "$pkgdir/usr/sbin/influxd"
 
 	install -d "$pkgdir/usr/share/man/man1/"
 	install -Dm644 man/*.1 "$pkgdir/usr/share/man/man1/"
@@ -66,6 +69,6 @@ package() {
 	install -Dm644 "$srcdir/$pkgname.confd" "$pkgdir/etc/conf.d/$pkgname"
 }
 
-sha512sums="f8b74849f2de09b10de361d6008cab0e0291ea0978e3c89df5e758788d2dbfd5cc0b416bfaf3d14b04410a9cdff4ca7c96be6afadbf16490c0fbab599db3d643  influxdb-1.7.7.tar.gz
+sha512sums="ed47ab544e8c3088651d95b6a6126e5f18d05fc9272da683ffbe32427b3e142c954b596be4080a9545088e4b193f7ab141259f354385293597ff8cfa61e5de64  influxdb-1.7.9.tar.gz
 04fb33ee5b3d60c3e8655cc20423885140b66e74a822866cfe05668e942d24116878b1815a48b07063c707bb600cf0ff390994f0321c881eed557abde016eeb9  influxdb.initd
 1db8790c84a9e193a6029291b2a83a6083d1ddcc330c2191c4da6bdcc6410d832288aee275605b4ca041c8855fe8a1340631444e901044659755db0146d6d3dc  influxdb.confd"
