community/influxdb: disable on armhf due to test failure

--- a/community/influxdb/APKBUILD
+++ b/community/influxdb/APKBUILD
@@ -7,7 +7,7 @@ _commit=23bc63d43 # git rev-parse --short HEAD
 _branch=1.7 # Keep in sync with $pkgver
 pkgdesc="Scalable datastore for metrics, events, and real-time analytics"
 url="https://www.influxdata.com/time-series-platform/influxdb/"
-arch="all !x86" # many tests fail on x86, it's unclear whether it works at all.
+arch="all !x86 !armhf" # many tests fail on x86, it's unclear whether it works at all.
 license="MIT"
 makedepends="go dep asciidoc xmlto"
 install="$pkgname.pre-install"
