--- a/community/rpm/APKBUILD
+++ b/community/rpm/APKBUILD
@@ -2,16 +2,15 @@
 # Maintainer:
 pkgname=rpm
 pkgver=4.15.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Redhat Package Management utilities (RPM)"
-url="http://www.rpm.org"
+url="https://www.rpm.org/"
 arch="all"
 license="GPL-2.0-or-later LGPL-2.0-or-later"
 depends_dev="acl-dev binutils-dev bzip2-dev db-dev file-dev libarchive-dev
 	libcap-dev nspr-dev nss-dev popt-dev xz-dev zlib-dev"
-makedepends="$depends_dev gettext-dev graphviz py3-setuptools xz python3-dev
-	zstd-dev
-	automake autoconf libtool"
+makedepends="$depends_dev gettext-dev graphviz py3-setuptools python3-dev
+	zstd-dev automake autoconf libtool"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang py3-rpm:py_rpm"
 source="http://ftp.rpm.org/releases/rpm-${pkgver%.*}.x/rpm-$pkgver.tar.bz2
 	musl.patch
