main/samurai: add compdb support, fixes GNOME Builder

--- a/main/samurai/APKBUILD
+++ b/main/samurai/APKBUILD
@@ -2,14 +2,18 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=samurai
 pkgver=1.0
-pkgrel=2
+pkgrel=3
 pkgdesc="ninja-compatible build tool written in C"
 url="https://github.com/michaelforney/samurai"
 arch="all"
 license="Apache-2.0"
 options="!check"  # No test suite.
 subpackages="$pkgname-doc"
-source="https://github.com/michaelforney/samurai/releases/download/$pkgver/$pkgname-$pkgver.tar.gz"
+source="https://github.com/michaelforney/samurai/releases/download/$pkgver/$pkgname-$pkgver.tar.gz
+	0001-Fix-manifest-rebuild-when-it-was-pruned-due-to-resta.patch
+	0002-parse-Check-that-rules-always-have-a-command.patch
+	0003-parse-Check-that-rules-have-rspfile-iff-they-have-rs.patch
+	0004-tool-Implement-compdb.patch"
 builddir="$srcdir/$pkgname-$pkgver"
 provides="ninja"
 replaces="ninja"
@@ -23,4 +27,8 @@ package() {
 	ln -s samu "$pkgdir"/usr/bin/ninja
 }
 
-sha512sums="87b2a11a39dc36f3582abdc7c9d358c8fce241fe4155b5177d3e8588d1c040a62eb9daafd2365febbfadd6fcc27a3ceacf6f29ca6f871c822aad6f4bad527a51  samurai-1.0.tar.gz"
+sha512sums="87b2a11a39dc36f3582abdc7c9d358c8fce241fe4155b5177d3e8588d1c040a62eb9daafd2365febbfadd6fcc27a3ceacf6f29ca6f871c822aad6f4bad527a51  samurai-1.0.tar.gz
+a53c3a16a5d3115572a9c47d8a939bce6f5c5d05c9d4626a27a11c46a2bcec1497b1ca886d85da7f298340cc34fd6c65e613de9a4d726003b7f202376c267ae9  0001-Fix-manifest-rebuild-when-it-was-pruned-due-to-resta.patch
+2e4a061daa55115437af476c5e7721448d6986cf3111f4e94edf82f853e65a3da89e55103abc7f401506d3ea69aca34f3f9602c160bdf98c4c2ae3f38f8294e9  0002-parse-Check-that-rules-always-have-a-command.patch
+2558c16c5039bda1fb12f404e740dde780a195a875649cc87a51ccae8cee3e9ceb03befb9ba9301b6ed3cba02fd827ce50131a17aab74a5eacca9841a7e5efdd  0003-parse-Check-that-rules-have-rspfile-iff-they-have-rs.patch
+630a59438f8bf71466766b42aced2adf22bb19972b3d871f734b0fa9f09cb7fad8d3a5bc2acc4e690538f9f34339b8516fb1f1642817dbe66812b43095899114  0004-tool-Implement-compdb.patch"
