main/debian-archive-keyring: modernize

--- a/main/debian-archive-keyring/APKBUILD
+++ b/main/debian-archive-keyring/APKBUILD
@@ -3,24 +3,21 @@
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=debian-archive-keyring
 pkgver=2019.1
-pkgrel=0
+pkgrel=1
 pkgdesc="GnuPG archive keys of the Debian archive"
-url="http://packages.debian.org/sid/debian-archive-keyring"
+url="https://packages.debian.org/sid/debian-archive-keyring"
 arch="noarch"
-license="GPL"
+license="GPL-2.0-or-later"
 depends="gnupg"
-depends_dev=""
-makedepends="tar xz"
-install=""
 options="!check" # upstream doesn't have a test suite.
 subpackages="$pkgname-doc"
-source="http://ftp.debian.org/debian/pool/main/d/debian-archive-keyring/${pkgname}_${pkgver}_all.deb"
+source="https://deb.debian.org/debian/pool/main/d/debian-archive-keyring/debian-archive-keyring_${pkgver}_all.deb"
 
 unpack() {
 	cd "$srcdir"
 	for i in $source; do
 		case $i in
-			*.deb) ar x ${i##*/} || return 1 ;;
+			*.deb) ar x ${i##*/} ;;
 		esac
 	done
 }
@@ -31,7 +28,7 @@ build() {
 
 package() {
 	mkdir -p "$pkgdir"
-	tar -xJf "$srcdir"/data.tar.xz -C "$pkgdir"/
+	tar -xf "$srcdir"/data.tar.xz -C "$pkgdir"/
 }
 
 sha512sums="051b8507c9deba0d13dc0137ff43ae9db27b20b78c3437ca680046ae9b1c81ac505dc0a4460d4a83c4b256a04a2e57d1280eb2e8a3afb2a58f150ca6c37d0d63  debian-archive-keyring_2019.1_all.deb"
