community/openjdk8: modernize

--- a/community/openjdk8/APKBUILD
+++ b/community/openjdk8/APKBUILD
@@ -13,20 +13,51 @@ arch="all"
 license="custom"
 depends="$pkgname-jre java-cacerts nss"
 options="sover-namecheck"
-makedepends="bash findutils tar zip file paxmark gawk util-linux libxslt
-	autoconf automake linux-headers sed xz coreutils
-	openjdk7 ca-certificates
-	nss-dev nss-static cups-dev jpeg-dev giflib-dev libpng-dev libxt-dev
-	lcms2-dev libxp-dev libxtst-dev libxinerama-dev zlib-dev
-	libxrender-dev alsa-lib-dev freetype-dev fontconfig-dev
-	gtk+2.0-dev krb5-dev attr-dev pcsc-lite-dev lksctp-tools-dev
-	libxcomposite-dev"
+makedepends="
+	alsa-lib-dev
+	attr-dev
+	autoconf
+	automake
+	bash
+	ca-certificates
+	coreutils
+	cups-dev
+	file
+	findutils
+	fontconfig-dev
+	freetype-dev
+	gawk
+	giflib-dev
+	gtk+2.0-dev
+	jpeg-dev
+	krb5-dev
+	lcms2-dev
+	libpng-dev
+	libxcomposite-dev
+	libxinerama-dev
+	libxp-dev
+	libxrender-dev
+	libxslt
+	libxt-dev
+	libxtst-dev
+	linux-headers
+	lksctp-tools-dev
+	nss-dev
+	nss-static
+	openjdk7
+	paxmark
+	pcsc-lite-dev
+	sed
+	util-linux
+	zip
+	zlib-dev
+	"
 
 case $CARCH in
-x86)	_jarch=i386;;
-x86_64)	_jarch=amd64;;
-arm*)	_jarch=aarch32;;
-*)	_jarch="$CARCH";;
+	x86)	_jarch=i386;;
+	x86_64)	_jarch=amd64;;
+	arm*)	_jarch=aarch32;;
+	*)	_jarch="$CARCH";;
 esac
 
 _bootstrap_java_home="/usr/lib/jvm/java-1.7-openjdk"
@@ -140,8 +171,6 @@ unpack() {
 }
 
 prepare() {
-	cd "$builddir"
-
 	local ver_u=$(sed -En 's/^\s*JDK_UPDATE_VERSION\s*=\s*(\S+).*/\1/p' acinclude.m4)
 	local ver_b=$(sed -En 's/^\s*BUILD_VERSION\s*=\s*b(\S+).*/\1/p' acinclude.m4)
 	[ "${pkgver#*.}" = "$ver_u.$ver_b" ] \
@@ -184,7 +213,6 @@ build() {
 	export DISTRIBUTION_PATCHES
 	echo "icedtea patches: $DISTRIBUTION_PATCHES"
 
-	cd "$builddir"
 	bash ./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -208,7 +236,7 @@ build() {
 		--with-nashorn-src-zip="$srcdir/nashorn-$_dropsver.tar.xz" \
 		--with-pax=paxmark \
 		--with-jdk-home="$_bootstrap_java_home" \
-		--with-pkgversion="Alpine ${pkgver}-r${pkgrel}" \
+		--with-pkgversion="Alpine $pkgver-r$pkgrel" \
 		--enable-nss \
 		--enable-sunec \
 		--enable-non-nss-curves
@@ -223,8 +251,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
-
 	mkdir -p "$pkgdir"/$_java_home
 
 	cp -a openjdk.build/images/j2sdk-image/* "$pkgdir"/$_java_home/
@@ -232,7 +258,7 @@ package() {
 
 	# This archive contains absolute paths from the build environment,
 	# so it does not work on the target system. User can generate it
-	# running `java -Xshare:dump`.
+	# running 'java -Xshare:dump'.
 	rm -f "$pkgdir"/$_jrelib/server/classes.jsa
 
 	# pax mark again (due to fakeroot xattr handling bug)
