community/bzr: modernize

--- a/community/bzr/APKBUILD
+++ b/community/bzr/APKBUILD
@@ -1,26 +1,24 @@
-# Maintainer: 
+# Maintainer:
 pkgname=bzr
 pkgver=2.7.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A scalable distributed SCM tool"
-url="http://bazaar.canonical.com/"
+url="https://bazaar.canonical.com/"
 arch="all"
 license="GPL-2.0-or-later"
 depends="python2"
 makedepends="python2-dev"
 subpackages="$pkgname-doc"
-source="https://launchpad.net/${pkgname}/${pkgver%.*}/${pkgver}/+download/${pkgname}-${pkgver}.tar.gz
+options="!check" # no testsuite
+source="https://launchpad.net/bzr/${pkgver%.*}/$pkgver/+download/bzr-$pkgver.tar.gz
 	CVE-2017-14176.patch
 	"
-builddir="$srcdir"/$pkgname-$pkgver
 
 build() {
-	cd "$builddir"
 	python2 setup.py build
 }
 
 package() {
-	cd "$builddir"
 	python2 setup.py install --root="$pkgdir"
 }
 
