testing/bemenu: enable all archs

--- a/testing/bemenu/APKBUILD
+++ b/testing/bemenu/APKBUILD
@@ -5,7 +5,7 @@ pkgver="0.3.0"
 pkgrel=0
 pkgdesc="Dynamic menu library and client program inspired by dmenu with support for wayland compositors"
 url="https://github.com/Cloudef/bemenu"
-arch="x86_64"
+arch="all"
 license="GPL-3.0-or-later AND LGPL-3.0-or-later"
 depends_dev="libxkbcommon-dev libxinerama-dev ncurses-dev wayland-dev pango-dev"
 makedepends="cmake $depends_dev"
