main/openldap: build ldapcpp library

--- a/main/openldap/APKBUILD
+++ b/main/openldap/APKBUILD
@@ -13,7 +13,7 @@
 #
 pkgname=openldap
 pkgver=2.4.48
-pkgrel=2
+pkgrel=3
 pkgdesc="LDAP Server"
 url="http://www.openldap.org/"
 arch="all"
@@ -23,7 +23,7 @@ pkggroups="ldap"
 depends_dev="openssl-dev cyrus-sasl-dev util-linux-dev"
 makedepends="$depends_dev db-dev groff unixodbc-dev libtool mosquitto-dev
 	autoconf automake"
-subpackages="$pkgname-dev $pkgname-doc libldap
+subpackages="$pkgname-dev $pkgname-doc libldapcpp libldap
 	$pkgname-clients $pkgname-mqtt $pkgname-passwd-pbkdf2:passwd_pbkdf2
 	$pkgname-backend-all:_backend_all:noarch
 	$pkgname-overlay-all:_overlay_all:noarch
@@ -110,6 +110,16 @@ build() {
 	# Build passwd pbkdf2.
 	make prefix=/usr libexecdir=/usr/lib \
 		-C contrib/slapd-modules/passwd/pbkdf2
+
+	# Build C++ library.
+	cd contrib/ldapc++
+	./configure \
+		--build=$CBUILD \
+		--host=$CHOST \
+		--prefix=/usr \
+		--with-libldap="$builddir/libraries/libldap/.libs -L$builddir/libraries/liblber/.libs" \
+		--with-ldap-includes="$builddir/include"
+	make
 }
 
 package() {
@@ -124,6 +134,9 @@ package() {
 	# Install passwd pbkdf2.
 	make DESTDIR="$pkgdir" prefix=/usr libexecdir=/usr/lib \
 		-C contrib/slapd-modules/passwd/pbkdf2 install
+
+	make DESTDIR="$pkgdir" \
+		-C contrib/ldapc++ install
 
 	cd "$pkgdir"
 
@@ -150,6 +163,14 @@ package() {
 
 	install -D -m 755 "$srcdir"/slapd.initd etc/init.d/slapd
 	install -D -m 644 "$srcdir"/slapd.confd etc/conf.d/slapd
+}
+
+libldapcpp() {
+	pkgdesc="LDAPv3 C++ Class Library"
+	depends=""
+	install=""
+
+	_submv "usr/lib/libldapcpp.so*"
 }
 
 libldap() {
