--- a/main/openldap/APKBUILD
+++ b/main/openldap/APKBUILD
@@ -20,14 +20,29 @@ arch="all"
 license="custom"
 pkgusers="ldap"
 pkggroups="ldap"
-depends_dev="openssl-dev cyrus-sasl-dev util-linux-dev"
-makedepends="$depends_dev db-dev groff unixodbc-dev libtool mosquitto-dev
-	autoconf automake"
-subpackages="$pkgname-dev $pkgname-doc libldapcpp libldap
-	$pkgname-clients $pkgname-mqtt $pkgname-passwd-pbkdf2:passwd_pbkdf2
+depends_dev="cyrus-sasl-dev openssl-dev util-linux-dev"
+makedepends="
+	$depends_dev
+	autoconf
+	automake
+	db-dev
+	groff
+	libtool
+	mosquitto-dev
+	unixodbc-dev
+	"
+subpackages="
+	$pkgname-dev
+	$pkgname-doc
+	libldapcpp
+	libldap
+	$pkgname-clients
+	$pkgname-mqtt
+	$pkgname-passwd-pbkdf2:passwd_pbkdf2
 	$pkgname-backend-all:_backend_all:noarch
 	$pkgname-overlay-all:_overlay_all:noarch
-	$pkgname-openrc"
+	$pkgname-openrc
+	"
 install="$pkgname.pre-install $pkgname.post-install $pkgname.post-upgrade"
 source="https://www.openldap.org/software/download/OpenLDAP/$pkgname-release/$pkgname-$pkgver.tgz
 	openldap-2.4-ppolicy.patch
