community/kea: fix depends_dev

--- a/community/kea/APKBUILD
+++ b/community/kea/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=kea
 pkgver=1.7.3
-pkgrel=1
+pkgrel=2
 pkgdesc="DHCPv4 and DHCPv6 server from ISC"
 url="http://kea.isc.org"
 # armhf, armv7: limited by log4cplus
@@ -12,14 +12,14 @@ url="http://kea.isc.org"
 arch="all !armhf !armv7 !s390x"
 license="MPL2"
 depends="kea-dhcp4 kea-dhcp6"
+depends_dev="boost-dev log4cplus-dev"
 checkdepends="procps"
 makedepends="
+	$depends_dev
 	bison
-	boost-dev
 	botan-dev
 	flex
 	libcap
-	log4cplus-dev
 	mariadb-dev
 	postgresql-dev
 	python3-dev
