testing/ipynb2html: upgrade to 0.1.0

--- a/testing/ipynb2html/APKBUILD
+++ b/testing/ipynb2html/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ipynb2html
-pkgver=0.1.0_beta8
-_pkgver=${pkgver/_beta/-beta.}
+pkgver=0.1.0
 pkgrel=0
 pkgdesc="Convert Jupyter Notebook to static HTML"
 url="https://github.com/jirutka/ipynb2html"
@@ -11,8 +10,8 @@ license="MIT BSD-3-Clause"
 depends="nodejs"
 makedepends="yarn"
 subpackages="$pkgname-dbg"
-source="https://github.com/jirutka/$pkgname/releases/download/v$_pkgver/ipynb2html-v$_pkgver-src.tar.gz"
-builddir="$srcdir/$pkgname-v$_pkgver-src"
+source="https://github.com/jirutka/$pkgname/releases/download/v$pkgver/ipynb2html-v$pkgver-src.tar.gz"
+builddir="$srcdir/$pkgname-v$pkgver-src"
 
 build() {
 	yarn build --force
@@ -37,4 +36,4 @@ dbg() {
 	install -D -m 644 ipynb2html.map "$subpkgdir"/usr/bin/ipynb2html.map
 }
 
-sha512sums="5c54e55395284fcab3ca86626637cea902fd93e8ca040307e9cb5e1c9ae3e5a1de520ec43bff1a7583b6ee0430358c154d43b4d16844bba735db75c70eac10d2  ipynb2html-v0.1.0-beta.8-src.tar.gz"
+sha512sums="0a1441f3a2b02abb4c0d08fbed0a6e3c74327e3b076793ecf724066493f1815f99d62ba1941c3aba6bd11b459ad12c06cd09b2dace43b6269ea8999c5774970e  ipynb2html-v0.1.0-src.tar.gz"
