community/borgbackup: add shell completion subpackages

--- a/community/borgbackup/APKBUILD
+++ b/community/borgbackup/APKBUILD
@@ -1,16 +1,21 @@
 # Contributor: Olivier Mauras <olivier@mauras.ch>
+# Contributor: Michał Polański <michal@polanski.me>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=borgbackup
+_pkgname=borg
 pkgver=1.1.10
-pkgrel=2
+pkgrel=3
 pkgdesc="Deduplicating backup program"
 url="https://borgbackup.readthedocs.io/"
-arch="all !s390x" # limited by py3-zmq
+arch="all !s390x" # limited by py3-pyzmq
 license="BSD-3-Clause"
 depends="python3 py3-pyzmq"
 makedepends="python3-dev lz4-dev acl-dev attr-dev openssl-dev linux-headers
 	py3-setuptools"
-source="https://github.com/$pkgname/borg/releases/download/$pkgver/$pkgname-$pkgver.tar.gz"
+subpackages="$pkgname-bash-completion:bashcomp:noarch
+	$pkgname-fish-completion:fishcomp:noarch
+	$pkgname-zsh-completion:zshcomp:noarch"
+source="https://github.com/borgbackup/borg/releases/download/$pkgver/borgbackup-$pkgver.tar.gz"
 
 build() {
 	python3 setup.py build
@@ -22,6 +27,33 @@ package() {
 	# Clean some useless files.
 	cd "$pkgdir"/usr/lib/python*/site-packages/borg
 	find . -name '*.h' -delete -o -name '*.c' -delete -o -name '*.pyx' -delete
+}
+
+bashcomp() {
+	pkgdesc="Bash completions for $pkgname"
+	depends=""
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	install -Dm644 "$builddir"/scripts/shell_completions/bash/$_pkgname \
+		"$subpkgdir"/usr/share/bash-completion/completions/$_pkgname
+}
+
+fishcomp() {
+	pkgdesc="Fish completions for $pkgname"
+	depends=""
+	install_if="$pkgname=$pkgver-r$pkgrel fish"
+
+	install -Dm644 "$builddir"/scripts/shell_completions/fish/$_pkgname.fish \
+		"$subpkgdir"/usr/share/fish/completions/$_pkgname.fish
+}
+
+zshcomp() {
+	pkgdesc="Zsh completions for $pkgname"
+	depends=""
+	install_if="$pkgname=$pkgver-r$pkgrel zsh"
+
+	install -Dm644 "$builddir"/scripts/shell_completions/zsh/_$_pkgname \
+		"$subpkgdir"/usr/share/zsh/site-functions/_$_pkgname
 }
 
 sha512sums="9315335208f10427e3105e10819817d15fd05171479252903bd51eaacb016bc3ff792d505b9203ce0b9b41ec350472bdb9a23b0128e7fe156aaa47c1608451c0  borgbackup-1.1.10.tar.gz"
