testing/py3-cairosvg: add missing dependency

--- a/testing/py3-cairosvg/APKBUILD
+++ b/testing/py3-cairosvg/APKBUILD
@@ -2,12 +2,12 @@
 pkgname=py3-cairosvg
 _pyname=CairoSVG
 pkgver=2.4.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Cairo-based SVG renderer for python"
 url="https://cairosvg.org"
 arch="noarch"
 license="LGPL-3.0-or-later"
-depends="python3 py3-tinycss2 py3-cssselect2 py3-defusedxml py3-cairocffi"
+depends="python3 py3-tinycss2 py3-cssselect2 py3-defusedxml py3-cairocffi py3-pillow"
 checkdepends="py3-pytest py3-pillow py3-pytest-flake8 py3-pytest-isort"
 makedepends="python3-dev py3-setuptools cairo-dev"
 _pypiprefix="${_pyname%${_pyname#?}}"
