--- a/testing/cdogs-sdl/APKBUILD
+++ b/testing/cdogs-sdl/APKBUILD
@@ -5,10 +5,10 @@ pkgver=0.7.0
 pkgrel=0
 pkgdesc="Classic overhead run-and-gun game"
 url="https://cxong.github.io/cdogs-sdl/"
-arch="x86_64 x86"
-license="GPL"
+arch="all"
+license="GPL-1.0-only"
 makedepends="cmake sdl2_image-dev sdl2-dev sdl2_mixer-dev mesa-dev"
-options="!check"
+options="!check" # make check not implemented
 source="$pkgname-$pkgver.tar.gz::https://github.com/cxong/cdogs-sdl/archive/$pkgver.tar.gz"
 
 build() {
