--- a/testing/ssh-tools/APKBUILD
+++ b/testing/ssh-tools/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Sven Wick <sven.wick@gmx.de>
 
 pkgname="ssh-tools"
-pkgver="1.5"
+pkgver="1.6"
 pkgrel=0
 pkgdesc="collection of various tools using ssh"
 arch="noarch"
 url="https://github.com/vaporup/ssh-tools/"
 license="GPL-3.0-or-later"
-depends="bash colordiff cmd:ssh cmd:ssh-keygen cmd:ssh-keyscan cmd:tput"
+depends="bash colordiff cmd:ssh cmd:ssh-keygen cmd:ssh-keyscan cmd:column"
 source="${pkgname}-${pkgver}.tar.gz::https://github.com/vaporup/${pkgname}/archive/v${pkgver}.tar.gz"
 options="!check" # does not have a testsuite
 
@@ -16,4 +16,4 @@ package() {
 	install -Dt "${pkgdir}/usr/bin" ssh-*
 }
 
-sha512sums="70fd63661d33c79037a9bd62457a583452f5763a32467d0d1058638afe2a9e5e033917ca0d1e627a4db69bc7451097a36a57a763d5bc436f224ecf27eb759e19  ssh-tools-1.5.tar.gz"
+sha512sums="034f4d534c4376f145beed6f6aefbd93de51ce2aa424691a78f39200014fcca5e685248476ceeb030d0492d4a8485a4fd126db80eefa7821e289a7b534b6e9ef  ssh-tools-1.6.tar.gz"
