--- a/testing/shfmt/APKBUILD
+++ b/testing/shfmt/APKBUILD
@@ -1,35 +1,27 @@
 # Contributor: Olliver Schinagl <oliver@schinagl.nl>
 # Maintainer: Olliver Schinagl <oliver@schinagl.nl>
 pkgname="shfmt"
-pkgver="2.6.4"
+pkgver=3.0.1
 pkgrel=0
 pkgdesc="A shell parser, formatter, and interpreter (sh/bash/mksh)"
 url="https://mvdan.cc/sh"
 arch="all"
 license="BSD-3-Clause"
-options="!check" # No tests available
+options="!check" # no test suite
 makedepends="go"
 source="$pkgname-$pkgver.tar.gz::https://github.com/mvdan/sh/archive/v$pkgver.tar.gz"
 builddir="$srcdir/sh-$pkgver"
 
-prepare() {
-	mkdir -p "$srcdir/go/src/mvdan.cc"
-	if [ ! -L "$srcdir/go/src/mvdan.cc/sh" ]; then
-		ln -s "$builddir" "$srcdir/go/src/mvdan.cc/sh"
-	fi
-}
-
 build() {
-	export GOPATH="$srcdir/go"
 	go build \
-	   -ldflags "-w -X main.version=$pkgver-$pkgrel" \
-	   -v \
-	   "./cmd/shfmt/"
+		-ldflags "-w -X main.version=$pkgver-$pkgrel" \
+		-v \
+		./cmd/shfmt
 }
 
 package() {
-	install -D -m 755 -t "$pkgdir/usr/bin" \
-	        "$builddir/shfmt"
+	install -Dm755 -t "$pkgdir"/usr/bin \
+		"$builddir"/shfmt
 }
 
-sha512sums="e7afd566a35606c6e137654fa1caf349429ba3a27ee804e6763ecdfab779bd189fd5ac853a301bf1d4371dc6115fd89b80474cf051678768f84dd553f7faafe8  shfmt-2.6.4.tar.gz"
+sha512sums="751a79c0e0da298613c135be1142a0ea34973467bb7db340ec756f4bd97daf09af459d97f43911804e19b2643b9ee78c607544bca7b8561d75acb374d2f533cf  shfmt-3.0.1.tar.gz"
