main/sshfs: depend on fuse3
Without this change using sshfs fails with:

	fuse: failed to exec fusermount3: No such file or directory

--- a/main/sshfs/APKBUILD
+++ b/main/sshfs/APKBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sshfs
 pkgver=3.7.0
-pkgrel=1
+pkgrel=2
 pkgdesc="FUSE client based on the SSH File Transfer Protocol"
 url="https://github.com/libfuse/sshfs"
 arch="all"
 license="GPL-2.0-or-later"
-depends="openssh-client"
+depends="openssh-client fuse3"
 makedepends="fuse3-dev glib-dev meson coreutils"
 subpackages="$pkgname-doc"
 source="https://github.com/libfuse/sshfs/releases/download/sshfs-$pkgver/sshfs-$pkgver.tar.xz"
