--- a/main/alpine-conf/APKBUILD
+++ b/main/alpine-conf/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=alpine-conf
 pkgver=3.8.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Alpine configuration management scripts"
 url="https://git.alpinelinux.org/alpine-conf/about"
 arch="all"
@@ -9,6 +9,7 @@ license="MIT"
 depends="openrc>=0.24.1-r6 busybox>=1.26.1-r3"
 source="https://dev.alpinelinux.org/archive/alpine-conf/alpine-conf-$pkgver.tar.xz
 	0001-libalpine-use-correct-exit-code-in-trap.patch
+	0001-libalpine-make-vecho-and-qecho-return-success.patch
 	"
 
 builddir="$srcdir"/$pkgname-$pkgver
@@ -26,4 +27,5 @@ package() {
 }
 
 sha512sums="73bd999b552d266c994cc1535570b86ddd7a7379f3b9e244c4985722f5754b11323a4e677cdae91fa4f0098dadd388eba679a99d98e140354ab7681bb85f9dfa  alpine-conf-3.8.3.tar.xz
-b5a4ed4e1507a6dde503edca5bc71c9f26e81e3f85dd01aa3705b300d7e9b9f48b7005250dea3105bef89a688bbf70257290e921d49534f6e6dd8848bb5b2fdb  0001-libalpine-use-correct-exit-code-in-trap.patch"
+b5a4ed4e1507a6dde503edca5bc71c9f26e81e3f85dd01aa3705b300d7e9b9f48b7005250dea3105bef89a688bbf70257290e921d49534f6e6dd8848bb5b2fdb  0001-libalpine-use-correct-exit-code-in-trap.patch
+8f99efff4f6e3a77b10e4a806ea6cf1ebc81577773314af7d2d8e36b646856a2e5786afbd92841a84af07830e42c7a336c221b1ea97a004963d189767cd348f0  0001-libalpine-make-vecho-and-qecho-return-success.patch"
