--- a/main/alpine-conf/APKBUILD
+++ b/main/alpine-conf/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=alpine-conf
 pkgver=3.8.3
-pkgrel=5
+pkgrel=6
 pkgdesc="Alpine configuration management scripts"
 url="https://git.alpinelinux.org/alpine-conf/about"
 arch="all"
@@ -13,6 +13,7 @@ source="https://dev.alpinelinux.org/archive/alpine-conf/alpine-conf-$pkgver.tar.
 	0001-setup-apkrepos-use-cdn-as-default-answer.patch
 	0001-update-kernel-fix-dtbs-dir.patch
 	0001-lbu-fix-wrong-cipher-match-in-check_openssl-for-lbu-.patch
+	0001-libalpine-make-vecho-and-qecho-return-success.patch
 	"
 
 builddir="$srcdir"/$pkgname-$pkgver
@@ -34,4 +35,5 @@ b5a4ed4e1507a6dde503edca5bc71c9f26e81e3f85dd01aa3705b300d7e9b9f48b7005250dea3105
 bf59558e5477929a0692c9ba182b71f7913533b50abd53303be6c47897348c53ec587c27a20442c180564c552f84d90d3c7d700b5f6e2cb4bb0a6ac1a7dafd1d  0001-setup-disk-let-user-set-ROOT_SIZE.patch
 a11e69e18da2c86cb5a419b2fc9db144b7fef4676fb4cd7c33bfe6dbf638adb872f7dd43b5c86fba916e94bdcd2d3c352931c579ea3e3333736c1fc3e5cd22fa  0001-setup-apkrepos-use-cdn-as-default-answer.patch
 e6d7ef82f2c875866dba6c8d18c6b8d9909c0a56081252ff1a1b0bfba2a493a3550377e20fa2975e5b6aa4e52f2607730b7ed158dd419751fad2368d9fa0ece5  0001-update-kernel-fix-dtbs-dir.patch
-d2f961761f237240bb046d9a56c07927d2011b5b62c9d84542d45ac144a09aa08e186efe759d66929a2796e416442db8a339e4bdf9e88643c2bf15f4125fe280  0001-lbu-fix-wrong-cipher-match-in-check_openssl-for-lbu-.patch"
+d2f961761f237240bb046d9a56c07927d2011b5b62c9d84542d45ac144a09aa08e186efe759d66929a2796e416442db8a339e4bdf9e88643c2bf15f4125fe280  0001-lbu-fix-wrong-cipher-match-in-check_openssl-for-lbu-.patch
+8f99efff4f6e3a77b10e4a806ea6cf1ebc81577773314af7d2d8e36b646856a2e5786afbd92841a84af07830e42c7a336c221b1ea97a004963d189767cd348f0  0001-libalpine-make-vecho-and-qecho-return-success.patch"
