--- a/main/mdocml/APKBUILD
+++ b/main/mdocml/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=mdocml
 _pkgname=mandoc
 pkgver=1.14.5
-pkgrel=1
+pkgrel=2
 pkgdesc="mdoc/man compiler"
 url="http://mdocml.bsd.lv/"
 arch="all"
@@ -16,6 +16,7 @@ source="http://mdocml.bsd.lv/snapshots/$_pkgname-$pkgver.tar.gz
 	shared-libmandoc.patch
 	outdated-warn-disable.patch
 	fix-tbl-null-pointer.patch
+	mandoc_configure.patch
 	"
 
 builddir="$srcdir/$_pkgname-$pkgver"
@@ -77,4 +78,5 @@ soelim() {
 sha512sums="848f290847f3095757f25647e6d73eb7044018b145bf6f9dc8b5db164b1421911efdc5b3b9022ec3a2c5af9687a84d5acedee810f2bd2f7caaa9242dadb2cc52  mandoc-1.14.5.tar.gz
 b1bd2c197584948cc8bab2310e759b8942b9f9479254ffb5a8223cfa6ba03c9e1a4d402c5440b8d9f962be9a020287d3dd8556592c17f2b46f15f405d9d373cb  shared-libmandoc.patch
 ced05e8b57fb9705c6d8d8570cd6b06ad187511a4c243ac2dbc34064aa164ca49e0c877160134161dcb98ebd5e61a5c23d5741f03ef95903ff56193dd07f36a1  outdated-warn-disable.patch
-bb46bc3a0f07881e5362b32d478632fb209f9740017c467f2258e9b7ddbece6175bba598287d8c24626c9ee7217eb92ae60e0a30aeafdfc4b0154f4d312cbcca  fix-tbl-null-pointer.patch"
+bb46bc3a0f07881e5362b32d478632fb209f9740017c467f2258e9b7ddbece6175bba598287d8c24626c9ee7217eb92ae60e0a30aeafdfc4b0154f4d312cbcca  fix-tbl-null-pointer.patch
+a44d86fb012acbc05eb233122e7ca3170e5e01c7c49115c2fe83f49891d442ba94601a039018cfa01cc1ef3cd02d5aff4d1e01abd4230b8bc2091e649ad991db  mandoc_configure.patch"
