main/freeradius: switch from rlm_python to rlm_python3, modernize

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -5,13 +5,13 @@
 pkgname=freeradius
 _realname=freeradius
 pkgver=3.0.20
-pkgrel=1
+pkgrel=2
 pkgdesc="RADIUS (Remote Authentication Dial-In User Service) server"
 url="https://freeradius.org/"
 arch="all"
 license="GPL-2.0-or-later"
 makedepends="openssl-dev mariadb-connector-c-dev postgresql-dev gdbm-dev readline-dev
-	bash libtool autoconf automake perl-dev python2-dev openldap-dev krb5-dev
+	bash libtool autoconf automake perl-dev python3-dev openldap-dev krb5-dev
 	unixodbc-dev linux-pam-dev sqlite-dev talloc-dev libpcap-dev
 	linux-headers curl-dev hiredis-dev json-c-dev net-snmp-tools"
 pkggroups="radius"
@@ -55,7 +55,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	# freeradius requries json.h to be in a dir called 'json'. We fool
 	# the configure script with a symlink pointing to proper location.
 	ln -s /usr/include/json-c json
@@ -83,6 +82,7 @@ build() {
 		--with-rlm_rest \
 		--with-rlm_redis \
 		--with-rlm_rediswho \
+		--with-modules="rlm_python3" \
 		--without-rlm_eap_tnc \
 		--without-rlm_eap_ikev2 \
 		--without-rlm_sql_iodbc \
@@ -95,7 +95,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	install -d -m0750 -o root -g radius \
 		"${pkgdir}"${_radconfdir}
 	install -d -m0750 -o radius -g radius \
@@ -227,14 +226,14 @@ postgresql() {
 }
 
 python() {
-	depends="freeradius=$pkgver-r$pkgrel python2"
+	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-python=$pkgver-r$pkgrel"
 	pkgdesc="Python module for FreeRADIUS server"
 	mkdir -p "${subpkgdir}"${_radlibdir}
 	mv "${pkgdir}"${_radlibdir}/rlm_python* "${subpkgdir}"${_radlibdir}
 	for dir in $_radmodsdir $_radmodsconfdir; do
 		mkdir -p "${subpkgdir}"$dir
-		mv "${pkgdir}"$dir/python "${subpkgdir}"$dir
+		mv "${pkgdir}"$dir/python3 "${subpkgdir}"$dir
 	done
 }
 
