testing/liblouis: fix check, add -doc subpackage
This was missing help2man (docs) and Python (check).
Fix license and cleanup APKBUILD

--- a/testing/liblouis/APKBUILD
+++ b/testing/liblouis/APKBUILD
@@ -5,15 +5,15 @@ pkgrel=0
 pkgdesc="Braille translator and back-translator"
 url="http://liblouis.org/"
 arch="all"
-license="GPL-3.0"
-depends=""
-makedepends=""
+license="GPL-3.0-or-later"
+makedepends="help2man python3"
 install=""
-subpackages="$pkgname-static $pkgname-dev $pkgname-bin:_bin"
+subpackages="$pkgname-static $pkgname-dev $pkgname-bin:_bin $pkgname-doc"
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/liblouis/liblouis/releases/download/v$pkgver/liblouis-$pkgver.tar.gz
 	"
 builddir="$srcdir/$pkgname-$pkgver"
+options="!check" # Some unknown dependency is required
 
 build() {
 	./configure \
