--- a/testing/brltty/APKBUILD
+++ b/testing/brltty/APKBUILD
@@ -14,13 +14,8 @@ makedepends="
 	linux-headers
 	tcl
 	"
-install="$pkgname.pre-install $pkgname.post-install"
-subpackages="$pkgname-dev $pkgname-doc"
-source="
-	http://brltty.app/archive/brltty-$pkgver.tar.xz
-	brltty.initd
-	brltty.confd
-	"
+subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
+source="http://brltty.app/archive/brltty-$pkgver.tar.xz"
 builddir="$srcdir/$pkgname-$pkgver"
 options="!check" # no upstream test suite
 
@@ -47,12 +42,6 @@ package() {
 	make INSTALL_ROOT="$pkgdir" install
 	install -m644 -D Documents/$pkgname.conf \
 		"$pkgdir"/etc/$pkgname.conf
-	install -m755 -D "$srcdir"/$pkgname.initd \
-		"$pkgdir"/etc/init.d/$pkgname
-	install -m644 -D "$srcdir"/$pkgname.confd \
-		"$pkgdir"/etc/conf.d/$pkgname
 }
 
-sha512sums="07344fa902ad169967ca39d19b09dfea24e698011031dd63dce3eb997a4cb86622ee9427b216976b3ef60e5cbabb710a621621447c6bfa2313748fc1a1cf4b06  brltty-6.0.tar.xz
-512331fd6b4c5621c14b8bf07a94b2318dc33fea245de1e66d6385e1dc4cbfde7cb0d53507b46c85a11defe65a936cca40ace80df76130c7af2ef5999899892c  brltty.initd
-f11f0d192cd7823307c2ce4ddc7b3fff5190f72d3f65a5524b487021a95a222aca1fd36ab1eb58ed533e7acd555bfb70f0c8a13db20338ea31527f3151fd2bd7  brltty.confd"
+sha512sums="07344fa902ad169967ca39d19b09dfea24e698011031dd63dce3eb997a4cb86622ee9427b216976b3ef60e5cbabb710a621621447c6bfa2313748fc1a1cf4b06  brltty-6.0.tar.xz"
