testing/tpm2-tools: upgrade to 4.1.1 and remove some makedepends

--- a/testing/tpm2-tools/APKBUILD
+++ b/testing/tpm2-tools/APKBUILD
@@ -1,25 +1,20 @@
 # Contributor: Alexander Sack <asac@pantacor.com>
 # Maintainer: Alexander Sack <asac@pantacor.com>
 pkgname="tpm2-tools"
-pkgver="4.1"
+pkgver="4.1.1"
 pkgrel=0
 pkgdesc="TPM2 Tools"
 url="https://github.com/tpm2-software/tpm2-tools/"
-arch="all !s390x" # missing tpm2-tss
+arch="all"
 license="BSD-2-Clause"
 makedepends="tpm2-tss-dev tpm2-tss-rc tpm2-tss-tctildr
-	automake autoconf autoconf-archive libtool openssl-dev
-	doxygen linux-headers curl-dev"
+	openssl-dev curl-dev"
 subpackages="$pkgname-doc"
 _sourcever="${pkgver/_/-}"
 source="https://github.com/tpm2-software/tpm2-tools/releases/download/$_sourcever/tpm2-tools-$_sourcever.tar.gz"
 builddir="$srcdir/$pkgname-$_sourcever"
 options="!check"
 
-
-prepare() {
-	./bootstrap
-}
 
 build() {
 	./configure \
@@ -33,4 +28,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="34bbb57cb646e762e50e6b44d2fc81babef1b27a74f1fea27391255bb77232f8c3342a470b591b58c1f9aede8fff167e838dcbd36b85f2f606365cb62286ec93  tpm2-tools-4.1.tar.gz"
+sha512sums="25952cf947f0acd16b1a8dbd3ac8573bce85ff970a7e24c290c4f9cd29418e77a3e48ac82c932fbd250887a9303ab301ff92db594c2fffaba47b873382444d26  tpm2-tools-4.1.1.tar.gz"
