community/py3-google-auth: upgrade to 1.11.0
Dependencies are listed at:
https://github.com/googleapis/google-auth-library-python/blob/release-v1.11.0/setup.py#L21

Test dependencies are listed at
https://github.com/googleapis/google-auth-library-python/blob/master/noxfile.py#L17

This commit update the dependencies to match the above. The exception
continues to be the apparently optional py3-grpcio dependency which is
still in testing/.

Mock is a backport of unittest.mock to earlier Python versions. It isn't
required on Python 3.8, so this commit patches the tests to use the
standard library.

--- a/community/py3-google-auth/APKBUILD
+++ b/community/py3-google-auth/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Keith Maxwell <keith.maxwell@gmail.com>
 pkgname=py3-google-auth
 _pyname=google-auth
-pkgver=1.7.2
+pkgver=1.11.0
 pkgrel=0
 pkgdesc="Google authentication library for Python."
 url="https://google-auth.readthedocs.io/en/latest/"
@@ -10,15 +10,23 @@ arch="noarch"
 license="Apache-2.0"
 depends="
 	python3
-	py3-cachetools<3.2
+	py3-cachetools<5.0
 	py3-asn1-modules
 	py3-rsa<4.1
 	py3-setuptools
 	py3-six
 	"
-checkdepends="py3-certifi py3-flask py3-oauth2client py3-pytest py3-pytest-cov
-	py3-pytest-localserver py3-requests py3-requests-oauthlib py3-urllib3
-	py3-cryptography"
+checkdepends="
+	py3-flask
+	py3-freezegun
+	py3-oauth2client
+	py3-pytest
+	py3-pytest-cov
+	py3-pytest-localserver
+	py3-requests
+	py3-urllib3
+	py3-cryptography
+	"
 source="https://files.pythonhosted.org/packages/source/g/$_pyname/$_pyname-$pkgver.tar.gz
 	10-use-mock-from-standard-library.patch
 	"
@@ -37,5 +45,5 @@ check() {
 	pytest-3 # skips grpc tests
 }
 
-sha512sums="36802b0923ddab01cdd5acaa7e7a873597968378dd52a8ab5724a357c5ba34df81a3d444b62f68e9670e62b282b542e1c98afe591df71b152548946e9f43c271  google-auth-1.7.2.tar.gz
-4242765bce157f7e3ba42b668396d7629b78a389f82832960b689741c0f30f6a1a3d07e217b37c6c6515813b6a7783e1cc9308046bc38d9fcb0c596bf3f896ff  10-use-mock-from-standard-library.patch"
+sha512sums="ef51884a1e6724c74787918facb409f693cc0271ac193155273f102e67b31a857453911d541de0d50081812ff3654de04b0d853d33e9ab9e11e88cf7ae2d6a51  google-auth-1.11.0.tar.gz
+34c6eeaf2e83370ec78c5cfd99b54940a3c3027ec361c162c8d5f653426d3fca48705ad76b97660489ffd5c9e0be49a5f9dd5a4df9831777cd6855c9288a9150  10-use-mock-from-standard-library.patch"
