testing/brltty: disable ppc64le
Build fails with:

> /usr/lib/gcc/powerpc64le-alpine-linux-musl/9.2.0/../../../../powerpc64le-alpine-linux-musl/bin/ld:
> ports_glibc.o: in function `readPort1': ports_glibc.c:(.text+0x130):
> undefined reference to `inb'
> /usr/lib/gcc/powerpc64le-alpine-linux-musl/9.2.0/../../../../powerpc64le-alpine-linux-musl/bin/ld:
> ports_glibc.o: in function `writePort1': ports_glibc.c:(.text+0x178):
> undefined reference to `outb

--- a/testing/brltty/APKBUILD
+++ b/testing/brltty/APKBUILD
@@ -4,7 +4,7 @@ pkgver="6.0"
 pkgrel=0
 pkgdesc="Refreshable braille display driver daemon"
 url="http://brltty.app"
-arch="all"
+arch="all !ppc64le"
 license="LGPL-2.1"
 makedepends="
 	autoconf
