community/borgbackup: add doc subpackage
and change URL

--- a/community/borgbackup/APKBUILD
+++ b/community/borgbackup/APKBUILD
@@ -4,15 +4,16 @@
 pkgname=borgbackup
 _pkgname=borg
 pkgver=1.1.10
-pkgrel=3
+pkgrel=4
 pkgdesc="Deduplicating backup program"
-url="https://borgbackup.readthedocs.io/"
+url="https://www.borgbackup.org/"
 arch="all !s390x" # limited by py3-pyzmq
 license="BSD-3-Clause"
 depends="python3 py3-pyzmq"
 makedepends="python3-dev lz4-dev acl-dev attr-dev openssl-dev linux-headers
 	py3-setuptools"
-subpackages="$pkgname-bash-completion:bashcomp:noarch
+subpackages="$pkgname-doc
+	$pkgname-bash-completion:bashcomp:noarch
 	$pkgname-fish-completion:fishcomp:noarch
 	$pkgname-zsh-completion:zshcomp:noarch"
 source="https://github.com/borgbackup/borg/releases/download/$pkgver/borgbackup-$pkgver.tar.gz"
@@ -23,6 +24,9 @@ build() {
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
+
+	install -Dm644 -t "$pkgdir"/usr/share/man/man1 \
+		"$builddir"/docs/man/*.1
 
 	# Clean some useless files.
 	cd "$pkgdir"/usr/lib/python*/site-packages/borg
