--- a/community/beets/APKBUILD
+++ b/community/beets/APKBUILD
@@ -3,22 +3,31 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=beets
 pkgver=1.4.9
-pkgrel=1
+pkgrel=2
 pkgdesc="Music library manager and MusicBrainz tagger"
 options="!check" # Requires unpackaged dependencies
 url="http://beets.io"
 arch="noarch"
 license="MIT"
+subpackages="$pkgname-doc"
+makedepends="py3-sphinx"
 depends="python3 py3-mutagen py3-unidecode py3-musicbrainzngs py3-munkres
 	py3-setuptools py3-yaml py3-jellyfish py3-six"
 source="https://github.com/sampsyo/$pkgname/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz"
 
 build() {
-	python3 setup.py build
+	# sdist := source distribution tarball, builds man pages
+	python3 setup.py build sdist
 }
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
+
+	local man
+	for man in man/*.?; do
+		install -Dm644 "$man" \
+			"$pkgdir"/usr/share/man/man${man##*.}/${man##*/}
+	done
 }
 
 sha512sums="616bad4ca3ecdd05d2f59846fd67215f476ce89cc34d63bc6351efcbaf1e33e5ca783cb8a716e8597b56a7e08e6a6dc15e64b51e89dd786bfb6c5d847f66de5a  beets-1.4.9.tar.gz"
