--- a/community/py3-ruamel.yaml/APKBUILD
+++ b/community/py3-ruamel.yaml/APKBUILD
@@ -1,19 +1,21 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
 # Maintainer: Keith Maxwell <keith.maxwell@gmail.com>
 pkgname=py3-ruamel.yaml
-pkgver=0.16.5
-pkgrel=1
+_pyname=ruamel.yaml
+pkgver=0.16.6
+pkgrel=0
 pkgdesc="A YAML parser/emitter"
-options="!check" # Tests fail to import ruamel.yaml
-url="https://bitbucket.org/ruamel/yaml"
-arch="all"
+options="!check" # tests are not included in the latest artifact on PyPI
+url="https://sourceforge.net/projects/ruamel-yaml/"
+arch="noarch"
 license="MIT"
 replaces="py-ruamel py3-ruamel"
 provides="py-ruamel=$pkgver-r$pkgrel py3-ruamel=$pkgver-r$pkgrel"
+depends="py3-ruamel.yaml.clib"
 makedepends="python3-dev py3-setuptools"
 checkdepends="py3-pytest py3-ruamel.std.pathlib"
-source="$pkgname-$pkgver.tar.gz::https://bitbucket.org/ruamel/yaml/get/$pkgver.tar.gz"
-builddir="$srcdir/ruamel-yaml-ff02b83b8f91"
+source="https://files.pythonhosted.org/packages/source/r/$_pyname/$_pyname-$pkgver.tar.gz"
+builddir="$srcdir/$_pyname-$pkgver"
 
 build() {
 	python3 setup.py build
@@ -25,17 +27,13 @@ package() {
 }
 
 check() {
-	PYTHONPATH="$PWD/build/lib" python3 -m pytest \
+	PYTHONPATH="$PWD/build/lib" pytest-3 \
 		--deselect=_test/test_issues.py::TestIssues::test_issue_82 \
 		--deselect=_test/test_issues.py::TestIssues::test_issue_220 \
 		--deselect=_test/test_issues.py::TestIssues::test_issue_238 \
 		--deselect=_test/test_yamlobject.py::test_monster \
 		--deselect=_test/test_yamlobject.py::test_qualified_name00 \
-		--deselect=_test/test_cyaml.py::test_load_cyaml \
-		--deselect=_test/test_cyaml.py::test_dump_cyaml \
-		--deselect=_test/test_cyaml.py::test_load_cyaml_1_2 \
-		--deselect=_test/test_cyaml.py::test_dump_cyaml_1_2 \
 		_test/test_*.py
 }
 
-sha512sums="ce08ae50b9084d56c8e0f5a546cb3a23d4cdad643836aa60a44a995459d3d90057d14fa79493c36f415d7bc22936806d0b4f9b34f93192ac536526a314024c45  py3-ruamel.yaml-0.16.5.tar.gz"
+sha512sums="3e919f1cd438483d9a4310506a456bc1e30beabb384f29d9d8c5c24b1e4250bdfd5137aa295efad48f3ad7fc11d2a183c8069986be35c6c3e1a92339e4ecfd75  ruamel.yaml-0.16.6.tar.gz"
