main/boost: update url to use https

--- a/main/boost/APKBUILD
+++ b/main/boost/APKBUILD
@@ -4,7 +4,7 @@ pkgver=1.72.0
 _pkgver="${pkgver//./_}"
 pkgrel=2
 pkgdesc="Free peer-reviewed portable C++ source libraries"
-url="http://www.boost.org/"
+url="https://www.boost.org/"
 arch="all"
 license="custom"
 depends="$pkgname-libs"
