main/clang: build more documentation
Includes more man pages, most importantly clang(1), and also some HTML
documentation.

--- a/main/clang/APKBUILD
+++ b/main/clang/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=clang
 # Note: Update together with llvm.
 pkgver=9.0.1
-pkgrel=2
+pkgrel=3
 _llvmver=${pkgver%%.*}
 pkgdesc="A C language family front-end for LLVM"
 arch="all"
@@ -23,6 +23,7 @@ makedepends="
 	llvm$_llvmver-test-utils
 	ninja
 	python3
+	py3-sphinx
 	"
 checkdepends="diffutils bash"
 depends_dev="$pkgname=$pkgver-r$pkgrel"
@@ -57,6 +58,9 @@ build() {
 		-DCLANG_VENDOR=Alpine \
 		-DCLANG_BUILD_EXAMPLES=OFF \
 		-DCLANG_INCLUDE_DOCS=ON \
+		-DLLVM_BUILD_DOCS=ON \
+		-DLLVM_ENABLE_SPHINX=ON \
+		-DSPHINX_WARNINGS_AS_ERRORS=OFF \
 		-DCLANG_INCLUDE_TESTS=ON \
 		-DCLANG_PLUGIN_SUPPORT=ON \
 		-DLIBCLANG_BUILD_STATIC=ON \
