--- a/community/mpc/APKBUILD
+++ b/community/mpc/APKBUILD
@@ -9,9 +9,7 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="libmpdclient-dev py3-sphinx meson check-dev"
 subpackages="$pkgname-bash-completion:bashcomp:noarch $pkgname-doc"
-source="https://www.musicpd.org/download/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.xz
-	doc-py3.patch
-	"
+source="https://www.musicpd.org/download/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.xz"
 
 build() {
 	meson \
@@ -43,5 +41,4 @@ bashcomp() {
 		"$subpkgdir"/usr/share/bash-completion/completions/$pkgname
 }
 
-sha512sums="d3247dfb54ac3c95caf5666088968a952b33eb7e8f941bca4f3715603839cf5a1bc5300488c78fdce6e38f612b243f2252ea682b8d0fec9f230acd760bf3560c  mpc-0.33.tar.xz
-7be9a58480b5b7b78e411272aa1ccc996e3c837b954c14cfed9cbed31897ae0c34afc4fad5e7dc7ad194dc6e24cebcff7e063610db73f94327de4c9656a946c5  doc-py3.patch"
+sha512sums="d3247dfb54ac3c95caf5666088968a952b33eb7e8f941bca4f3715603839cf5a1bc5300488c78fdce6e38f612b243f2252ea682b8d0fec9f230acd760bf3560c  mpc-0.33.tar.xz"
