community/ncmpc: remove doc-py3.patch
Previously py3-sphinx only provided sphinx-build-3 not sphinx-build,
this changed recently. As such, the patch should no longer be needed.
This change does not include a pkgrel bump as it should result in an
identical package.

--- a/community/ncmpc/APKBUILD
+++ b/community/ncmpc/APKBUILD
@@ -10,9 +10,7 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="glib-dev libmpdclient-dev meson ncurses-dev py3-sphinx boost-dev"
 subpackages="$pkgname-doc $pkgname-lang $pkgname-dbg"
-source="https://www.musicpd.org/download/ncmpc/0/ncmpc-$pkgver.tar.xz
-	doc-py3.patch
-	"
+source="https://www.musicpd.org/download/ncmpc/0/ncmpc-$pkgver.tar.xz"
 
 build() {
 	LDFLAGS="$LDFLAGS -lintl" meson \
@@ -43,5 +41,4 @@ package() {
 	rm -rf "$pkgdir"/usr/share/doc/$pkgname/html
 }
 
-sha512sums="0077a0e03eecfb097e4e454d12432abcca3ea8bb8fee6af994afea460d8d42bf95a95af12d25906e4853c3c70104784a496f25bc4c9a99f57ca0e13c7f0ced9e  ncmpc-0.37.tar.xz
-de2f4ed40c72047e535b97a7a4ae57d36e15bab167a1724e636628e1a55134c128e1e13d5bc12d3223d095f8d91e966aa660af70004312b58e6d040b8914ba8e  doc-py3.patch"
+sha512sums="0077a0e03eecfb097e4e454d12432abcca3ea8bb8fee6af994afea460d8d42bf95a95af12d25906e4853c3c70104784a496f25bc4c9a99f57ca0e13c7f0ced9e  ncmpc-0.37.tar.xz"
