community/sn0int: do not set SPHINXBUILD explicitly
Previously phy3-sphinx only provided sphinx-build-3, not sphinx-build.
Fortunately, this changed recently. This change does not include a
pkgrel bump as it should result in the same package.

--- a/community/sn0int/APKBUILD
+++ b/community/sn0int/APKBUILD
@@ -29,7 +29,7 @@ build() {
 	"target/release/sn0int" completions zsh > completions/_sn0int
 	"target/release/sn0int" completions fish > completions/sn0int.fish
 
-	make -C docs man SPHINXBUILD=sphinx-build-3
+	make -C docs man
 }
 
 check() {
