--- a/community/sn0int/APKBUILD
+++ b/community/sn0int/APKBUILD
@@ -19,6 +19,7 @@ subpackages="$pkgname-doc
 	$pkgname-zsh-completion:zshcomp:noarch
 	$pkgname-fish-completion:fishcomp:noarch
 	"
+options="net"
 source="$pkgname-$pkgver.tar.gz::https://github.com/kpcyrd/sn0int/archive/v$pkgver.tar.gz"
 
 build() {
