main/py3-sphinx: add comment regarding binaries with -3 postfix

--- a/main/py3-sphinx/APKBUILD
+++ b/main/py3-sphinx/APKBUILD
@@ -31,6 +31,8 @@ check() {
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 
+	# TODO: The binaries with the -3 postfix should be
+	# considered deprecated and removed in a future release.
 	local path; for path in "$pkgdir"/usr/bin/*; do
 		mv "$path" "$path"-3
 	done
