community/arandr: Fix missing dependency on py3-cairo

--- a/community/arandr/APKBUILD
+++ b/community/arandr/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: ScrumpyJack <scrumpyjack@st.ilet.to>
 pkgname=arandr
 pkgver=0.1.10
-pkgrel=1
+pkgrel=2
 pkgdesc="ARandR provides a simple visual front end for XRandR"
 options="!check" # No testsuite
 url="http://christian.amsuess.com/tools/arandr/"
 arch="noarch"
 license="GPL-3.0-or-later"
-depends="python3 py3-gobject3 xrandr"
+depends="python3 py3-gobject3 py3-cairo xrandr"
 makedepends="py3-docutils gettext"
 subpackages="$pkgname-doc $pkgname-lang"
 source="http://christian.amsuess.com/tools/arandr/files/${pkgname}-${pkgver}.tar.gz"
