--- a/main/mesa/APKBUILD
+++ b/main/mesa/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mesa
 pkgver=19.3.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Mesa DRI OpenGL library"
 url="https://www.mesa3d.org"
 arch="all"
@@ -17,6 +17,7 @@ subpackages="
 	$pkgname-vulkan-ati:_vulkan
 	$pkgname-dri-ati:_dri_deprecated
 	$pkgname-dri-nouveau:_dri_deprecated
+	$pkgname-dbg
 	"
 _llvmver=9
 depends_dev="
