community/mpd: enable avahi support
adding avahi-dev dependency and relevant compile option.
test/run_avahi fails to build, and could not find how to fix it. As this is just for build testing I remove it with remove-avahi-test.patch  Equally happy if someone finds a way to fix it...

Tested on x86_64 target system and mpd service is well advertised by avahi

--- a/community/mpd/APKBUILD
+++ b/community/mpd/APKBUILD
@@ -9,7 +9,7 @@ case $pkgver in
 *.*.*) _branch=${pkgver%.*};;
 *.*) _branch=$pkgver;;
 esac
-pkgrel=0
+pkgrel=1
 pkgdesc="Music daemon that plays MP3, FLAC, Ogg Vorbis files and Audio CDs"
 url="https://musicpd.org"
 pkgusers="mpd"
@@ -20,7 +20,7 @@ makedepends="py3-sphinx lame-dev glib-dev curl-dev libao-dev libmad-dev flac-dev
 	libogg-dev faad2-dev libid3tag-dev libvorbis-dev alsa-lib-dev
 	libsamplerate-dev libshout-dev libmodplug-dev boost-dev icu-dev
 	libnfs-dev samba-dev opus-dev ffmpeg-dev meson libmpdclient-dev
-	libcdio-paranoia-dev py3-attrs libcap"
+	libcdio-paranoia-dev avahi-dev py3-attrs libcap"
 checkdepends="gtest-dev gtest"
 install="$pkgname.pre-install"
 subpackages="$pkgname-doc $pkgname-dbg $pkgname-openrc"
@@ -30,6 +30,7 @@ source="https://www.musicpd.org/download/mpd/$_branch/mpd-$pkgver.tar.xz
 	mpd.confd
 	disable-iso-test.patch
 	libcdio-paranoia-version.patch
+	remove-avahi-test.patch
 	"
 
 build() {
@@ -47,6 +48,7 @@ build() {
 		-Dffmpeg=enabled \
 		-Dlibmpdclient=enabled \
 		-Dcdio_paranoia=enabled \
+		-Dzeroconf=avahi \
 		-Dtest=true \
 		-Ddocumentation=true \
 		. output
@@ -87,4 +89,5 @@ f60f6f3e921d20732c1a4c31a97f28660b43fd649e767d6c39661b6a90145231a79ad3f740ae0d70
 8547f685adf3cdc7b2aab7bedeed8c72242011c6f1e01750415ac21eba5ecf6b416239f527adbc904f72439c5d476249148cfb89965e33de1be69421e02c18e0  mpd.initd
 41b2467f5b03f5c4dd7003cd5f56f6cfc1f67af7a9aa2538d70360f839625222bdd0c4b04c33e8cd52eeecfc354da3ca22f5aaab8aee357a5774aaf3503594e7  mpd.confd
 94de2fb5e984e3246f79c2c7ab2f3123bba6c7d34e0f9b075ba3946d65912fd7f5e9d37bdb0bdee769fa6f6f8abb8ca5f2788b7976e2e5490b848800b31539fb  disable-iso-test.patch
-1e0e59247a22944435ca6052767ea1359d46362083de40ce36276327e4974315862a9f995f0047811e122bf4ce871f0b3965d15580f6a752d95c3617aa83136c  libcdio-paranoia-version.patch"
+1e0e59247a22944435ca6052767ea1359d46362083de40ce36276327e4974315862a9f995f0047811e122bf4ce871f0b3965d15580f6a752d95c3617aa83136c  libcdio-paranoia-version.patch
+1c3da85437a9d89decd2ee692f9f9b64c6d990537a715e2e6d0f771e56593463e174ba22cfdeed6c3b49b9e490259cd693b746f0b33e8732795cf79f82a8d8c0  remove-avahi-test.patch"
