community/kea: move binary kea-lfc to kea-common, remove subpkg kea-utils
kea-lfc is actually not just an optional tools, it's run by kea-dhcp4 and
kea-dhcp6 when memfile lease-database is used.

--- a/community/kea/APKBUILD
+++ b/community/kea/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=kea
 pkgver=1.7.3
-pkgrel=2
+pkgrel=3
 pkgdesc="DHCPv4 and DHCPv6 server from ISC"
 url="http://kea.isc.org"
 # armhf, armv7: limited by log4cplus
@@ -38,7 +38,6 @@ subpackages="
 	$pkgname-dhcp6
 	$pkgname-http
 	$pkgname-shell::noarch
-	$pkgname-utils
 	$pkgname-hook-mysql-cb:hook_mysql_cb
 	$pkgname-hook-ha:hook_ha
 	$pkgname-hook-stat-cmds:hook_stat_cmds
@@ -193,13 +192,6 @@ shell() {
 	amove ./usr/lib/python3*
 }
 
-utils() {
-	pkgdesc="Optional utilities for Kea DHCP Server"
-	depends=""
-
-	amove ./usr/sbin/kea-lfc
-}
-
 hook_mysql_cb() {
 	pkgdesc="Kea MySQL Configuration Backend hooks library"
 	depends=""
@@ -237,6 +229,8 @@ hook_flex_option() {
 
 common() {
 	pkgdesc="Common files and libraries for Kea DHCP Server"
+	replaces="kea-utils"  # for backward compatibility
+	provides="kea-utils=$pkgver-r$pkgrel"  # for backward compatibility
 	depends=""
 
 	mkdir -p "$subpkgdir"
